--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </style>
   </head>
   <body>
+    <div id="time-display" style="position: absolute; top: 10px; left: 10px; color: white; font-size: 24px; font-family: monospace; background-color: rgba(0,0,0,0.5); padding: 5px;"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
