--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
       body {
         margin: 0;
       }
+      footer {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        color: white;
+        font-size: 12px;
+        font-family: monospace;
+        background-color: rgba(0,0,0,0.5);
+        padding: 5px;
+      }
     </style>
   </head>
   <body>
     <div id="time-display" style="position: absolute; top: 10px; left: 10px; color: white; font-size: 24px; font-family: monospace; background-color: rgba(0,0,0,0.5); padding: 5px;"></div>
     <div id="velocity-display" style="position: absolute; top: 50px; left: 10px; color: white; font-size: 24px; font-family: monospace; background-color: rgba(0,0,0,0.5); padding: 5px;"></div>
     <script type="module" src="/main.js"></script>
+    <footer>
+      This work is based on "Low Poly Rocket" (https://sketchfab.com/3d-models/low-poly-rocket-cb7bd0af3223462489b55ce2628e43af) by Designed By Jonathan (https://sketchfab.com/designedbyjonathan) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)
+    </footer>
   </body>
 </html>
